--- a/.gitignore
+++ b/.gitignore
@@ -1,117 +1,1 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-*.manifest
-*.spec
-
-pip-log.txt
-pip-delete-this-directory.txt
-
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
-
-
-*.mo
-*.pot
-
-
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-
-instance/
-.webassets-cache
-
-
-.scrapy
-
-
-docs/_build/
-
-
-.ipynb_checkpoints
-
-
-profile_default/
-ipython_config.py
-
-
-.python-version
-
-
-celerybeat-schedule
-
-
-*.sage.py
-
-
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-.spyderproject
-.spyderworkspace
-
-
-.ropeproject
-
-
-/site
-
-
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-
-.pyre/
-
-
-.pytype/
-
-cython_debug/
-
-*.h5
-*.hdf5
-*.npy
-*.npz
+notebooks/collected_data/
